--- a/WebNET/Views/SanPham/SanPhamPartial.cshtml
+++ b/WebNET/Views/SanPham/SanPhamPartial.cshtml
@@ -8,7 +8,7 @@
                     <li class="active">
                         <a class="" href="">Lastest</a>
                     </li>
-                    <li class="hvr-bounce-to-right"><a href="">Bestseller</a></li>
+                    <li class="hvr-bounce-to-right"><a href="">Bestselle</a></li>
                     <li class="hvr-bounce-to-right"><a href="">Special</a></li>
                 </ul>
             </div>
