--- a/WebNET/Views/Home/ChiTietSanPham.cshtml
+++ b/WebNET/Views/Home/ChiTietSanPham.cshtml
@@ -4,6 +4,8 @@
     Layout = "~/Views/Layout/HomeLayout.cshtml";
 }
 
+
+
 <main>
 
     <section class="register__title__wrapper">
@@ -14,8 +16,8 @@
                 </div>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb non-bg">
-                        <li class="breadcrumb-item"><a class="color-green" href="Index.cshtml">Home</a></li>
-                        <li class="breadcrumb-item"><a class="color-green" href="Index.cshtml">Organic Food</a></li>
+                        <li class="breadcrumb-item"><a class="color-green" href="">Home</a></li>
+                        <li class="breadcrumb-item"><a class="color-green" href="">Organic Food</a></li>
                         <li class="breadcrumb-item" aria-current="page">Accusantium Doloremque</li>
                     </ol>
                 </nav>
