--- a/WebNET/Views/SanPham/SanPham.cshtml
+++ b/WebNET/Views/SanPham/SanPham.cshtml
@@ -12,7 +12,7 @@
                 </div>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb non-bg">
-                        <li class="breadcrumb-item"><a class="color-green" href="index.html">Home</a></li>
+                        <li class="breadcrumb-item"><a class="color-green" href="~/Views/Home/Index.cshtml">Home</a></li>
                         <li class="breadcrumb-item" aria-current="page">Organic Food</li>
 
                     </ol>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <div class="banner__container">
-                        <img src="img/left-banner.jpg" alt="">
+                        <img src="~/Content/img/left-banner.jpg" alt="">
                     </div>
                     <div class="specials__container">
                         <div class="search__title">
@@ -121,7 +121,7 @@
                                 <li>
                                     <div class="product-item">
                                         <div class="image">
-                                            <img src="img/dudu.jpg" alt="">
+                                            <img src="~/Content/img/dudu.jpg" alt="">
                                         </div>
                                         <div class="content__wrapper">
                                             <div class="content">
@@ -143,7 +143,7 @@
                                 <li>
                                     <div class="product-item">
                                         <div class="image">
-                                            <img src="img/dudu.jpg" alt="">
+                                            <img src="~/Content/img/dudu.jpg" alt="">
                                         </div>
                                         <div class="content__wrapper">
                                             <div class="content">
@@ -165,7 +165,7 @@
                                 <li>
                                     <div class="product-item">
                                         <div class="image">
-                                            <img src="img/dudu.jpg" alt="">
+                                            <img src="~/Content/img/dudu.jpg" alt="">
                                         </div>
                                         <div class="content__wrapper">
                                             <div class="content">
@@ -191,7 +191,7 @@
                     <div class="banner__main__wrapper">
                         <h3>ORGANIC FOOD</h3>
                         <div class="image__banner__main">
-                            <img src="img/bannermain.jpg" alt="">
+                            <img src="~/Content/img/bannermain.jpg" alt="">
                         </div>
                     </div>
 
@@ -240,7 +240,7 @@
 
                                 <div class="product-item">
                                     <div class="product-item__image">
-                                        <img src="img/06-275x275.jpg" alt="Guava">
+                                        <img src="~/Content/img/06-275x275.jpg" alt="Guava">
                                     </div>
 
                                     <div class="product-item__content">
@@ -258,162 +258,7 @@
                                 </div>
 
 
-                                <div class="product-item">
-                                    <div class="product-item__image">
-                                        <img src="img/06-275x275.jpg" alt="Guava">
-                                    </div>
-
-                                    <div class="product-item__content">
-                                        <p>Guava</p>
-                                        <p><strong>$120</strong> <span class="price__line__through">$140</span></p>
-                                        <ul class="star-rank">
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                        </ul>
-                                        <a class="add-to-cart__btn" href="#">add to cart</a>
-                                    </div>
-                                </div>
-
-
-                                <div class="product-item">
-                                    <div class="product-item__image">
-                                        <img src="img/06-275x275.jpg" alt="Guava">
-                                    </div>
-
-                                    <div class="product-item__content">
-                                        <p>Guava</p>
-                                        <p><strong>$120</strong> <span class="price__line__through">$140</span></p>
-                                        <ul class="star-rank">
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                        </ul>
-                                        <a class="add-to-cart__btn" href="#">add to cart</a>
-                                    </div>
-                                </div>
-
-
-                                <div class="product-item">
-                                    <div class="product-item__image">
-                                        <img src="img/06-275x275.jpg" alt="Guava">
-                                    </div>
-
-                                    <div class="product-item__content">
-                                        <p>Guava</p>
-                                        <p><strong>$120</strong> <span class="price__line__through">$140</span></p>
-                                        <ul class="star-rank">
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                        </ul>
-                                        <a class="add-to-cart__btn" href="#">add to cart</a>
-                                    </div>
-                                </div>
-
-
-                                <div class="product-item">
-                                    <div class="product-item__image">
-                                        <img src="img/06-275x275.jpg" alt="Guava">
-                                    </div>
-
-                                    <div class="product-item__content">
-                                        <p>Guava</p>
-                                        <p><strong>$120</strong> <span class="price__line__through">$140</span></p>
-                                        <ul class="star-rank">
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                        </ul>
-                                        <a class="add-to-cart__btn" href="#">add to cart</a>
-                                    </div>
-                                </div>
-
-
-                                <div class="product-item">
-                                    <div class="product-item__image">
-                                        <img src="img/06-275x275.jpg" alt="Guava">
-                                    </div>
-
-                                    <div class="product-item__content">
-                                        <p>Guava</p>
-                                        <p><strong>$120</strong> <span class="price__line__through">$140</span></p>
-                                        <ul class="star-rank">
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                        </ul>
-                                        <a class="add-to-cart__btn" href="#">add to cart</a>
-                                    </div>
-                                </div>
-
-
-                                <div class="product-item">
-                                    <div class="product-item__image">
-                                        <img src="img/06-275x275.jpg" alt="Guava">
-                                    </div>
-
-                                    <div class="product-item__content">
-                                        <p>Guava</p>
-                                        <p><strong>$120</strong> <span class="price__line__through">$140</span></p>
-                                        <ul class="star-rank">
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                        </ul>
-                                        <a class="add-to-cart__btn" href="#">add to cart</a>
-                                    </div>
-                                </div>
-
-                                <div class="product-item">
-                                    <div class="product-item__image">
-                                        <img src="img/06-275x275.jpg" alt="Guava">
-                                    </div>
-
-                                    <div class="product-item__content">
-                                        <p>Guava</p>
-                                        <p><strong>$120</strong> <span class="price__line__through">$140</span></p>
-                                        <ul class="star-rank">
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                        </ul>
-                                        <a class="add-to-cart__btn" href="#">add to cart</a>
-                                    </div>
-                                </div>
-
-                                <div class="product-item">
-                                    <div class="product-item__image">
-                                        <img src="img/06-275x275.jpg" alt="Guava">
-                                    </div>
-
-                                    <div class="product-item__content">
-                                        <p>Guava</p>
-                                        <p><strong>$120</strong> <span class="price__line__through">$140</span></p>
-                                        <ul class="star-rank">
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                            <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                        </ul>
-                                        <a class="add-to-cart__btn" href="#">add to cart</a>
-                                    </div>
-                                </div>
+                                
                             </div>
                         </div>
 
