--- a/WebNET/Views/SanPham/SanPhamPartial.cshtml
+++ b/WebNET/Views/SanPham/SanPhamPartial.cshtml
@@ -1,4 +1,7 @@
-﻿<section class="main-content">
+﻿@using WebNET.Models;
+@model IEnumerable<product>
+
+<section class="main-content">
     <div class="container">
 
         <div class="main-content__container">
@@ -15,30 +18,41 @@
 
             <div data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1500" class="product-list aos-init">
                 <div class="product-list__container">
-                    <div class="product-item">
-                        <div class="product-item__image">
-                            <img src="~/Content/img/06-275x275.jpg" alt="Guava">
+                    @foreach (var item in Model)
+                    {
+
+                        <div class="product-item">
+
+                            <div class="product-item__image">
+                                <a href="@Url.Action("ChiTietSanPham", "Home", new { id = "Detail" })">
+                                    <img src="@Url.Content("~/Content/"+item.product_image)" alt="Guava" width="200px" height="200px">
+                                </a>
+                            </div>
+
+                            <div class="product-item__content">
+                                <p>@item.product_name</p>
+                                <p>
+                                    <strong>$120</strong>
+                                    <span class="price--line-through">$140</span>
+                                </p>
+                                <ul class="star-rank">
+                                    <li><i class="fas fa-star" aria-hidden="true"></i></li>
+                                    <li><i class="fas fa-star" aria-hidden="true"></i></li>
+                                    <li><i class="fas fa-star" aria-hidden="true"></i></li>
+                                    <li><i class="fas fa-star" aria-hidden="true"></i></li>
+                                    <li><i class="fas fa-star" aria-hidden="true"></i></li>
+                                </ul>
+                                <a class="add-to-cart__btn" href="#">add to cart</a>
+                            </div>
+
                         </div>
 
-                        <div class="product-item__content">
-                            <p>Guava</p>
-                            <p>
-                                <strong>$120</strong>
-                                <span class="price--line-through">$140</span>
-                            </p>
-                            <ul class="star-rank">
-                                <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fas fa-star" aria-hidden="true"></i></li>
-                            </ul>
-                            <a class="add-to-cart__btn" href="#">add to cart</a>
-                        </div>
-                    </div>
+                    }
                 </div>
             </div>
         </div>
     </div>
+
 </section>
+
 
