--- a/WebNET/Views/Admin/Admin.cshtml
+++ b/WebNET/Views/Admin/Admin.cshtml
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Metro Panel Flat Bootstarp Resposive Website Template| Home :: w3layouts</title>
+    <title>Admin</title>
     <link href="~/Content/Acss/bootstrap.css" rel="stylesheet" type='text/css' />
     <!-- Custom Theme files -->
     <link href="~/Content/Acss/style.css" rel="stylesheet" type="text/css" media="all" />
