--- a/WebNET/Views/Home/ChiTietSanPham.cshtml
+++ b/WebNET/Views/Home/ChiTietSanPham.cshtml
@@ -1,7 +1,9 @@
-﻿
+﻿@using WebNET.Models;
+
 @{
     ViewBag.Title = "ChiTietSanPham";
     Layout = "~/Views/Layout/HomeLayout.cshtml";
+  
 }
 
 
@@ -30,7 +32,7 @@
             <div class="row product__detail">
                 <div class="product__detail__image">
                     <div class="detail__image">
-                        <img src="~/Content/img/01-700x700.jpg" alt="">
+                        <img src="@Url.Content("~/Content/img/"+@ViewBag.img)" alt="">
                     </div>
                 </div>
 
@@ -38,7 +40,7 @@
                     <div class="pd__content">
                         <div class="product__detail__title">
                             <div>
-                                <h4 class="title__section">Accusantium Doloremque</h4>
+                                <h4 class="title__section">@ViewBag.name</h4>
                             </div>
                             <div class="rating">
 
@@ -91,7 +93,7 @@
                             </div>
 
                             <div class="price row">
-                                <h4>$104.00</h4>
+                                <h4>$  @ViewBag.price</h4>
                             </div>
 
                             <div class="more__props row align-items-center">
@@ -131,13 +133,7 @@
             <div class="container">
                 <div id="descriptionContent" class="show description__content">
                     <p>
-                        Stop your co-workers in their tracks with the stunning new 30-inch diagonal HP LP3065 Flat
-                        Panel
-                        Monitor. This flagship monitor features best-in-class performance and presentation features
-                        on a
-                        huge wide-aspect screen while letting you work as comfortably as possible - you might even
-                        forget
-                        you're at the office
+                        @ViewBag.des
                     </p>
                 </div>
 
