--- a/WebNET/Views/SanPham/SanPhamPartial.cshtml
+++ b/WebNET/Views/SanPham/SanPhamPartial.cshtml
@@ -24,8 +24,8 @@
                         <div class="product-item">
 
                             <div class="product-item__image">
-                                <a href="@Url.Action("ChiTietSanPham", "Home", new { id = "Detail" })">
-                                    <img src="@Url.Content("~/Content/"+item.product_image)" alt="Guava" width="200px" height="200px">
+                                <a href="@Url.Action("ChiTietSanPham", "Home", new { id = item.product_id })">
+                                    <img src="@Url.Content("~/Content/img/"+item.product_image)" alt="Guava" width="200px" height="200px">
                                 </a>
                             </div>
 
