--- a/WebNET/Views/TimKiem/KQTimkiem.cshtml
+++ b/WebNET/Views/TimKiem/KQTimkiem.cshtml
@@ -29,7 +29,7 @@
 
                                 <div class="product-item__image">
                                     <a href="@Url.Action("ChiTietSanPham", "Home", new { id = "Detail" })">
-                                        <img src="@Url.Content("~/Content/"+item.product_image)" alt="Guava" width="200px" height="200px">
+                                        <img src="@Url.Content("~/Content/img/"+item.product_image)" alt="Guava" width="200px" height="200px">
                                     </a>
                                 </div>
 
