--- a/WebNET/Views/Layout/HomeLayout.cshtml
+++ b/WebNET/Views/Layout/HomeLayout.cshtml
@@ -83,9 +83,9 @@
                                     <li><a href="@Url.Action("Login", "Login", new {id = "Login" })">Login</a></li>
                                 </ul>
                             </li>
-                            <li id="clickCart">
-                                <i class="fas fa-shopping-cart" aria-hidden="true"></i><span class="cart__quantity">0</span>
-                            </li>
+                            @*///////////////////////////*@
+                            @*Chen partial view giỏ hàng *@
+                            @Html.Action("GioHangPartial", "GioHang")
                         </ul>
                         <div class="cart__container" id="cartContainer">
                             <div class="cart__wrapper">
