--- a/WebNET/Views/Checkout/Checkout.cshtml
+++ b/WebNET/Views/Checkout/Checkout.cshtml
@@ -3,7 +3,6 @@
     ViewBag.Title = "Checkout";
     Layout = "~/Views/Layout/HomeLayout.cshtml";
 }
-
 <main>
     <section class="wrapper-category">
         <div class="breadcrumb__container row align-items-center">
@@ -498,7 +497,10 @@
                                         </table>
 
                                         <div class="step2__btn">
-                                            <a href="checkout-success.html">Confirm Order</a>
+                                            @using (Html.BeginForm("DatHang", "GioHang"))
+                                            {
+                                                <input type="submit" value="Confirm Order" class="btn btn-danger" />
+                                            }
                                         </div>
                                     </div>
                                 </div>
@@ -515,3 +517,4 @@
 
 </main>
 
+}
