--- a/WebNET/Views/GioHang/XemGioHang.cshtml
+++ b/WebNET/Views/GioHang/XemGioHang.cshtml
@@ -3,8 +3,207 @@
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layout/HomeLayout.cshtml";
+    decimal TotalPrice = 0.00M;
 }
+@if (Model == null || Model.Count == 0)
+{
+    <main>
+        <section class="wrapper-category">
+            <div class="breadcrumb__container row align-items-center">
+                <div class="breadcrumb__icon">
+                    <i class="fa fa-home"></i>
+                </div>
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb non-bg">
 
+                        <li class="breadcrumb-item color-green" aria-current="page">Cart Page</li>
+
+                    </ol>
+                </nav>
+            </div>
+            <div class="main__category__container">
+                <div class="category__search">
+                    <div class="search__by__category">
+                        <div class="search__title">
+                            <h3>CATEGORIES</h3>
+                        </div>
+                        <div class="list__category">
+                            <ul>
+                                <li>
+                                    <a>
+                                        organic food (15)
+                                    </a>
+                                </li>
+                                <li>
+                                    <a>
+                                        organic food (15)
+                                    </a>
+                                </li>
+                                <li>
+                                    <a>
+                                        organic food (15)
+                                    </a>
+                                </li>
+                                <li>
+                                    <a>
+                                        organic food (15)
+                                    </a>
+                                </li>
+                                <li>
+                                    <a>
+                                        organic food (15)
+                                    </a>
+                                </li>
+                                <li>
+                                    <a>
+                                        organic food (15)
+                                    </a>
+                                </li>
+                                <li>
+                                    <a>
+                                        organic food (15)
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="search__by__refine">
+                        <div class="search__title">
+                            <h3>REFINE SEARCH</h3>
+                        </div>
+                        <div class="list__search">
+                            <div class="title">
+                                <h4>COLOR</h4>
+                            </div>
+                            <div class="list__item">
+                                <form action="">
+                                    <input type="checkbox" /> Green(9) <br />
+                                    <input type="checkbox" /> Green(9) <br />
+                                    <input type="checkbox" /> Green(9) <br />
+                                    <input type="checkbox" /> Green(9) <br />
+                                </form>
+                            </div>
+                        </div>
+                        <div class="list__search">
+                            <div class="title">
+                                <h4>SIZE</h4>
+                            </div>
+                            <div class="list__item">
+                                <form action="">
+                                    <input type="checkbox" /> small(9) <br />
+                                    <input type="checkbox" /> small(9) <br />
+                                    <input type="checkbox" /> small(9) <br />
+                                </form>
+                            </div>
+                        </div>
+                        <div class="list__search">
+                            <div class="title">
+                                <h4>WEIGHT</h4>
+                            </div>
+                            <div class="list__item">
+                                <form action="">
+                                    <input type="checkbox" /> 5(9) <br />
+                                    <input type="checkbox" /> 12(9) <br />
+                                    <input type="checkbox" /> 32(9) <br />
+                                </form>
+                            </div>
+                        </div>
+                        <div class="button__search">
+                            <a href="">Refine Search</a>
+                        </div>
+                    </div>
+                    <div class="banner__container">
+                        <img src="img/left-banner.jpg" alt="" />
+                    </div>
+                    <div class="specials__container">
+                        <div class="search__title">
+                            <h3>SPECIALS</h3>
+                        </div>
+                        <div class="product-list">
+                            <ul>
+                                <li>
+                                    <div class="product-item">
+                                        <div class="image">
+                                            <img src="img/dudu.jpg" alt="" />
+                                        </div>
+                                        <div class="content__wrapper">
+                                            <div class="content">
+                                                <span class="hover">Exercitat Virginia</span>
+                                                <div class="price">
+                                                    <div class="price__sale">
+                                                        <span>$100</span>
+                                                    </div>
+                                                    <div class="price__cost">
+                                                        <span>$119</span>
+                                                    </div>
+                                                </div>
+                                                <a class="hover">Add To Cart</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="product-item">
+                                        <div class="image">
+                                            <img src="img/dudu.jpg" alt="" />
+                                        </div>
+                                        <div class="content__wrapper">
+                                            <div class="content">
+                                                <span class="hover">Exercitat Virginia</span>
+                                                <div class="price">
+                                                    <div class="price__sale">
+                                                        <span>$100</span>
+                                                    </div>
+                                                    <div class="price__cost">
+                                                        <span>$119</span>
+                                                    </div>
+                                                </div>
+                                                <a class="hover">Add To Cart</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="product-item">
+                                        <div class="image">
+                                            <img src="img/dudu.jpg" alt="" />
+                                        </div>
+                                        <div class="content__wrapper">
+                                            <div class="content">
+                                                <span class="hover">Exercitat Virginia</span>
+                                                <div class="price">
+                                                    <div class="price__sale">
+                                                        <span>$100</span>
+                                                    </div>
+                                                    <div class="price__cost">
+                                                        <span>$119</span>
+                                                    </div>
+                                                </div>
+                                                <a class="hover">Add To Cart</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div style="text-align:center">
+                    <div>
+                        <h1 style="color:red">Your cart is empty!</h1>
+                    </div>
+                    <div class="continue__shopping apply__coupon__button get__quotes">
+                        @Html.ActionLink("Go Shopping", "Index", "Home")
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+}
+else
+{
     <main>
         <section class="wrapper-category">
             <div class="breadcrumb__container row align-items-center">
@@ -197,28 +396,29 @@
                         @*-------------------------------*@
                         <div class="cart__body__container">
                             <div class="cart__body__list">
-                                <table>
+                                <table style="text-align:center">
                                     <tr>
-                                        <th style="text-align:center">Image</th>
-                                        <th style="text-align:center">Product Name</th>
-                                        <th style="text-align:center">Model</th>
-                                        <th style="text-align:center" class="quantity__table">Quantity</th>
-                                        <th style="text-align:center">Unit Price</th>
-                                        <th style="text-align:center">Total</th>
-                                        <th style="text-align:center"></th>
+                                        <th >Image</th>
+                                        <th>Product Name</th>
+                                        <th>Model</th>
+                                        <th class="quantity__table">Quantity</th>
+                                        <th>Unit Price</th>
+                                        <th>Total</th>
+                                        <th></th>
                                     </tr>
                                     @foreach (var item in Model)
                                     {
+                                        TotalPrice += item.ThanhTien;
                                         <tr>
-                                            <td style="text-align:center">
-                                                <img src="@Url.Content("~/Content/img"+ item.HinhAnh)" alt="">
+                                            <td>
+                                                <img src="@Url.Content("~/Content/img" + item.HinhAnh)" alt="">
                                             </td>
 
-                                            <td style="text-align:center">@item.TenSP</td>
-                                            <td style="text-align:center">@item.MaSP</td>
-                                            <td style="text-align:center">@item.SoLuong</td>
-                                            <td style="text-align:center" >$ @item.DonGia.ToString("#,##")</td>
-                                            <td style="text-align:center">$ @item.ThanhTien.ToString("#,##")</td>
+                                            <td>@item.TenSP</td>
+                                            <td>@item.MaSP</td>
+                                            <td>@item.SoLuong</td>
+                                            <td style="text-align:center">$@item.DonGia.ToString("#,##")</td>
+                                            <td style="text-align:center">$@item.ThanhTien.ToString("#,##")</td>
                                             <td style="text-align:center">
                                                 @Html.ActionLink("Sửa", "SuaGioHang", new { @MaSP = item.MaSP })
                                                 @Html.ActionLink("Xóa", "XoaGioHang", new { @MaSP = item.MaSP })
@@ -231,32 +431,29 @@
                             </div>
                             <div>
 
-
                             </div>
-                                <div class="summarize">
-                                    <table>
-                                        <tr>
-                                            <th>Total :</th>
-                                            <td>$85.00</td>
-                                        </tr>
-                                    </table>
+                            <div class="summarize">
+                                <table style="text-align:center">
+                                    <tr>
+                                        <th>Total Price:</th>
+                                        <td style="text-align:center">$@TotalPrice.ToString("#,##") </td>
+                                    </tr>
+
+                                </table>
+                            </div>
+
+                            <div class="checkout__cart">
+                                <div class="continue__shopping apply__coupon__button get__quotes">
+                                    @Html.ActionLink("Continue Shopping", "Index", "Home")
                                 </div>
-
-                                <div class="checkout__cart">
-                                    <div class="continue__shopping apply__coupon__button get__quotes">
-                                        @Html.ActionLink("Continue Shopping", "Index", "Home")
-                             
-                                    </div>
-
-                                    <div class="to__checkout apply__coupon__button get__quotes">
-                                        @Html.ActionLink("Checkout", "Checkout", "Checkout")
-                                    
-                                    </div>
+                                <div class="to__checkout apply__coupon__button get__quotes">
+                                    @Html.ActionLink("Checkout", "Checkout", "Checkout")
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
     </main>
-
+}
