--- a/WebNET/Views/Home/Index.cshtml
+++ b/WebNET/Views/Home/Index.cshtml
@@ -1,12 +1,14 @@
 ﻿@using WebNET.Models;
-
+@using PagedList.Mvc;
+@model PagedList.IPagedList<product>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layout/HomeLayout.cshtml";
 }
 @{ IEnumerable<product> listsp = (IEnumerable<product>)ViewBag.listsp;}
-@*@Url.Action("ChiTietSanPham", "Home", new { id = "Detail" })*@
+
 
 @Html.Partial("~/Views/SanPham/SanPhamPartial.cshtml", listsp);
+
 
 
