--- a/WebNET/Views/Home/Login.cshtml
+++ b/WebNET/Views/Home/Login.cshtml
@@ -1,11 +1,11 @@
 ﻿
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Login";
     Layout = "~/Views/Layout/HomeLayout.cshtml";
 }
 
     <main>
-        <section class="register__title__wrapper">
+        <section class="register__title">
             <div class="container">
                 <div class="breadcrumb__container row align-items-center">
                     <div class="breadcrumb__icon">
@@ -14,7 +14,7 @@
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb non-bg">
                             <li class="breadcrumb-item"><a class="color-green" href="index.html">Home</a></li>
-                            <li class="breadcrumb-item" aria-current="page">Register</li>
+                            <li class="breadcrumb-item" aria-current="page">Login</li>
                         </ol>
                     </nav>
                 </div>
@@ -163,72 +163,55 @@
                         </div>
                     </div>
 
-                    <div class="register__content__wrapper">
-                        <div class="register__header">
-                            <h2>REGISTER ACCOUNT</h2>
-                            <p>If you already have an account with us, please login at the login page.</p>
+                    <div class="login__content__wrapper row justify-content-between">
+                        <div class="new__customer">
+                            <form action="" class="new__customer__form">
+                                <div>
+                                    <h5>New Customer</h5>
+                                </div>
+                                <div>
+                                    <p style="color: #5f5f5f;" class="text__level2">Register Account</p>
+                                </div>
+                                <div>
+                                    <p style="color: #5f5f5f;">
+                                        By creating an account you will be able to shop faster,
+                                        be
+                                        up to date on an order's
+                                        status, and keep track of the orders you have previously made.
+                                    </p>
+                                </div>
+                                <div class="button__level2">
+                                    <a href="@Url.Action("DangKy", "Home", new { id = "Register" })">Continue</a>
+                                </div>
+                            </form>
                         </div>
-                        <form action="">
-                            <div class="register__title">
-                                <h5>Your Personal Details</h5>
+
+                        <div class="returning__customer">
+                            @*<form action="" class="returning__customer__form">*@
+                            @using (Html.BeginForm("Login","Home")) {
+                            <div>
+                                <h5>Returning Customer</h5>
                             </div>
-
-                            <div class="information">
-                                <div>
-                                    <label for=""><span>*</span>First Name</label>
-                                    <input type="text" name="" id="" placeholder="First Name">
-                                </div>
-
-                                <div>
-                                    <label for=""><span>*</span>Last Name</label>
-                                    <input type="text" name="" id="" placeholder="Last Name">
-                                </div>
-
-                                <div>
-                                    <label for=""><span>*</span>E-Mail</label>
-                                    <input type="text" name="" id="" placeholder="E-Mail">
-                                </div>
-
-                                <div>
-                                    <label for=""><span>*</span>Telephone</label>
-                                    <input type="text" name="" id="" placeholder="Telephone">
-                                </div>
-
-                                <div class="register__title">
-                                    <h5>Your Password</h5>
-                                </div>
-
-                                <div class="information">
-                                    <div>
-                                        <label for=""><span>*</span>Password</label>
-                                        <input type="text" name="" id="" placeholder="Password">
-                                    </div>
-
-                                    <div>
-                                        <label for=""><span>*</span>Password Confirm</label>
-                                        <input type="text" name="" id="" placeholder="Password Confirm">
-                                    </div>
-                                </div>
-
-                                <div class="register__title">
-                                    <h5>Newsletter</h5>
-                                </div>
-
-                                <div class="bottom__register">
-                                    <div class="pull__right">
-                                        I have read and agree to the
-                                        <a href="">Privacy Policy</a>
-                                        &nbsp;
-                                        <input type="checkbox">
-                                        &nbsp;
-                                        <a href="index.html" class="continue">Continue</a>
-                                    </div>
-                                </div>
-
+                            <div>
+                                <p style="color: #5f5f5f;" class="text__level2">I am a returning Customer</p>
                             </div>
-                        </form>
-
-
+                            <div>
+                                <p>Email Address</p>
+                                <input type="email" name="txtemail" id="" placeholder="E-Mail Address...">
+                            </div>
+                            <div>
+                                <p>Password</p>
+                                <input type="password" name="txtpassword" id="" placeholder="Password...">
+                                <p id="error" style="color:red">@ViewBag.error</p>
+                            </div>
+                            <div class="forgot">
+                                <a href="#">Forgotten Password</a>
+                            </div>
+                            <div class="button__level2">
+                                <input type="submit" value="Đăng nhập" id="btnDangnhap"/>
+                            </div>
+                            }
+                        </div>
                     </div>
                 </div>
             </div>
