--- a/WebNET/Views/GioHang/SuaGioHang.cshtml
+++ b/WebNET/Views/GioHang/SuaGioHang.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "SuaGioHang";
     Layout = "~/Views/Layout/HomeLayout.cshtml";
+    decimal TotalPrice = 0.00M;
 }
 
 @{
@@ -44,14 +45,16 @@
                                 </tr>
                                 @foreach (var item in lstGioHang)
                                 {
+
                                     //sp co maSP duoc chinh gui tu tham so ben trang xem gio hang
                                     if (Model.MaSP == item.MaSP)
                                     {
+                                        TotalPrice += item.ThanhTien;
                                         using (Html.BeginForm("CapNhatGioHang", "GioHang"))
                                         {
                                             <tr>
                                                 <td style="text-align:center">
-                                                    <img src="@Url.Content("~/Content/img" + item.HinhAnh)" alt="">
+                                                    <img src="@Url.Content("~/Content/img/" + item.HinhAnh)" width="50" height="50" alt="">
                                                 </td>
 
                                                 <td style="text-align:center">@item.TenSP</td>
@@ -69,7 +72,7 @@
                                     {
                                         <tr>
                                             <td style="text-align:center">
-                                                <img src="@Url.Content("~/Content/img"+ item.HinhAnh)" alt="">
+                                                <img src="@Url.Content("~/Content/img/"+ item.HinhAnh)" width="50" height="50" alt="">
                                             </td>
 
                                             <td style="text-align:center">@item.TenSP</td>
@@ -87,120 +90,27 @@
 
                             </table>
                         </div>
+                        <div>
+                            <p></p>
+                        </div>
+                        <div class="summarize">
+                            <table>
+                                <tr style="text-align:center">
+                                    <th>Total Price:</th>
+                                    <td style="text-align:center">$@TotalPrice.ToString("#,##")</td>
+                                </tr>
+                            </table>
+                        </div>
 
-                        <div class="cart__body__options">
-                            <div class="do__next">
-                                <h6>What would you like to do next?</h6>
-                                <p>
-                                    Choose if you have a discount code or reward points you want to use or would like to estimate your
-                                    delivery cost.
-                                </p>
-                            </div>
-
-                            <div class="optionals">
-                                <!-- Collapse buttons -->
-                                <div class="coupon__code">
-                                    <div>
-                                        <button class="btn btn__step" type="button" data-toggle="collapse" data-target="#collapseExample2"
-                                                aria-expanded="false" aria-controls="collapseExample2">
-                                            Use Coupon Code
-                                        </button>
-                                    </div>
-                                    <!-- / Collapse buttons -->
-                                    <!-- Collapsible element -->
-                                    <div class="collapse" id="collapseExample2">
-                                        <div class="mt-3">
-                                            <div class="coupon__code__container">
-                                                <div class="enter__coupon">
-                                                    <p>Enter your coupon here</p>
-                                                </div>
-
-                                                <div class="input__coupon"><input type="text"></div>
-
-                                                <div class="apply__coupon__button">
-                                                    <a href="">Apply Coupon</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="coupon__code">
-                                    <div>
-                                        <button class="btn btn__step" type="button" data-toggle="collapse" data-target="#collapseExample1"
-                                                aria-expanded="false" aria-controls="collapseExample1">
-                                            Estimate Shipping & Taxes
-                                        </button>
-                                    </div>
-                                    <!-- / Collapse buttons -->
-                                    <!-- Collapsible element -->
-                                    <div class="collapse" id="collapseExample1">
-                                        <div class="mt-3">
-                                            <div class="shipping__taxes__container">
-                                                <div>
-                                                    <p>Enter your destination to get a shipping estimate.</p>
-                                                </div>
-
-                                                <div class="province__container">
-                                                    <label for="province"><span>*</span>&nbsp;Provice</label>
-                                                    <select id="province" class="browser-default custom-select"
-                                                            aria-label="Example select with button addon">
-                                                        <option selected>---Please Select---</option>
-                                                        <option value="1">An Giang</option>
-                                                        <option value="2">Bắc Giang</option>
-                                                        <option value="3">Cà Mau</option>
-                                                    </select>
-                                                </div>
-
-
-
-                                                <div class="ward__container">
-                                                    <label for="ward"><span>*</span>&nbsp;Ward/District</label>
-                                                    <select id="ward" class="browser-default custom-select"
-                                                            aria-label="Example select with button addon">
-                                                        <option selected>---Please Select---</option>
-                                                        <option value="1">An Giang</option>
-                                                        <option value="2">Bắc Giang</option>
-                                                        <option value="3">Cà Mau</option>
-                                                    </select>
-                                                </div>
-
-                                                <div class="coupon__codes">
-                                                    <label for="postcode">Post Code</label>
-                                                    <input id="postcode" type="text">
-                                                </div>
-
-                                                <div class="apply__coupon__button get__quotes">
-                                                    <a href="">Get Quotes</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="summarize">
-                                <table>
-                                    <tr>
-                                        <th>Total :</th>
-                                        <td>$85.00</td>
-                                    </tr>
-                                </table>
-                            </div>
-
-                            <div class="checkout__cart">
-                                <div class="continue__shopping apply__coupon__button get__quotes">
-                                    @Html.ActionLink("Continue Shopping", "Index", "Home")
-                                </div>
-
-                                <div class="to__checkout apply__coupon__button get__quotes">
-                                    @Html.ActionLink("Checkout", "Checkout", "Checkout")
-                                </div>
+                        <div class="checkout__cart">
+                            <div class="continue__shopping apply__coupon__button get__quotes">
+                                @Html.ActionLink("Continue Shopping", "Index", "Home")
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 </main>
 
