--- a/WebNET/Views/Home/ChiTietSanPham.cshtml
+++ b/WebNET/Views/Home/ChiTietSanPham.cshtml
@@ -1,15 +1,13 @@
 ﻿@using WebNET.Models;
-
+@model List<ItemGioHang>
 @{
     ViewBag.Title = "ChiTietSanPham";
     Layout = "~/Views/Layout/HomeLayout.cshtml";
-  
 }
 
 
 
 <main>
-
     <section class="register__title__wrapper">
         <div class="container">
             <div class="breadcrumb__container row align-items-center">
@@ -71,12 +69,6 @@
                                 <p>Brand:&nbsp;</p>
                                 <p>Hewlett-Packard</p>
                             </div>
-
-                            <div class="row align-items-center">
-                                <p>Product Code:&nbsp;</p>
-                                <p>Product 21</p>
-                            </div>
-
                             <div class="row align-items-center">
                                 <p>Availability:&nbsp;</p>
                                 <p>In Stock</p>
@@ -97,15 +89,12 @@
                             </div>
 
                             <div class="more__props row align-items-center">
-                                <div class="quantity">
-                                    <h6>Quantity</h6>
-                                </div>
-                                <div class="input__quantity">
-                                    <input type="text" name="" value="1" id="">
-                                </div>
-                                <div class="add__to__cart">
-                                    <a href="">Add to cart</a>
-                                </div>
+                                @foreach (var item in (List<ItemGioHang>) Session["GioHang"])
+                                 {
+                                    <div class="add__to__cart">
+                                        <a href="@Url.Action("ThemGioHang", "GioHang", new { @MaSP = item.MaSP, @strURL = Request.Url.ToString()})">Add to cart</a>
+                                    </div>
+                                }
                             </div>
                         </div>
                     </div>
